--- a/src/index.css
+++ b/src/index.css
@@ -45,5 +45,23 @@ html {
 }
 
 section {
-  @apply h-screen w-screen;
+  @apply min-h-screen w-screen;
+}
+
+.whychoose {
+  background-image: url(../src/assets/breadbg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  @apply bg-transparent;
+  background-attachment: fixed;
+}
+
+.img-cont {
+  height: 80vh !important;
+
+  img {
+    object-fit: cover;
+    object-position: center;
+  }
 }
