--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 * {
+  box-sizing: border-box;
 }
 
 body {
@@ -10,10 +11,10 @@ body {
   outline: none;
   text-decoration: none;
   list-style: none;
-  box-sizing: border-box;
   overflow-x: hidden;
   background-color: var(--color-primary);
 }
+
 ::-webkit-scrollbar {
   width: 8px;
   height: 5px;
@@ -30,6 +31,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 @layer theme {
@@ -38,14 +40,17 @@ html {
     --color-secondary: #ad7345;
   }
 }
+
 @layer utilities {
   .cont {
     @apply mx-auto px-5;
+    max-width: 100%;
   }
 }
 
 section {
-  @apply min-h-screen w-screen;
+  @apply min-h-screen w-full;
+  overflow-x: hidden;
 }
 
 .whychoose {
@@ -53,10 +58,24 @@ section {
 }
 
 .img-cont {
-  height: 80vh !important;
+  height: 50vh;
+}
 
-  img {
-    object-fit: cover;
-    object-position: center;
+@media (min-width: 640px) {
+  .img-cont {
+    height: 60vh;
   }
+}
+
+@media (min-width: 1024px) {
+  .img-cont {
+    height: 80vh;
+  }
+}
+
+.img-cont img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
 }
