--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,12 @@ html {
   }
 }
 
-section {
+/* section:not([data-sonner-toaster]) {
+  @apply min-h-screen w-full;
+  overflow-x: hidden;
+} */
+
+.page-section {
   @apply min-h-screen w-full;
   overflow-x: hidden;
 }
@@ -78,4 +83,14 @@ section {
   object-position: center;
   width: 100%;
   height: 100%;
+}
+
+.und::after {
+  content: "";
+  width: 40px;
+  height: 3px;
+  background-color: var(--color-secondary);
+  bottom: -10px;
+  left: 0;
+  position: absolute;
 }
